--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ body {
     text-align: center;
 }
 .socials a {
-    padding: 0 20px 0 0;
+    padding: 0 10px 0 10px;
     cursor: default;
 }
 .socials img {
